# firefly_zephyr

./: .gitignore  CMakeLists.txt  README.md  RELEASE.md  develop_in_clion.sh  nrf52_pca10040.overlay  prj.conf
.github/workflows/: ci.yml
activator/: CMakeLists.txt  main.cpp  prj.conf
boards/arm/cordyceps/: Kconfig.board  Kconfig.defconfig  board-pinctrl.dtsi  board.cmake  cordyceps.dts  cordyceps_defconfig
boards/arm/firefly_v1/: Kconfig.board  Kconfig.defconfig  board-pinctrl.dtsi  board.cmake  firefly_v1.dts  firefly_v1.yaml  firefly_v1_defconfig
boards/arm/lock_v01/: Kconfig.board  Kconfig.defconfig  board-pinctrl.dtsi  board.cmake  lock_v01.dts  lock_v01.yaml  lock_v01_defconfig
boards/arm/locket/: Kconfig.board  Kconfig.defconfig  board.cmake  locket.dts  locket.yaml  locket_defconfig
boards/arm/power_meter/: Kconfig.board  Kconfig.defconfig  board-pinctrl.dtsi  board.c  board.cmake  power_meter.dts  power_meter_defconfig
common/: CMakeLists.txt  basics.cmake  battery.cpp  battery.h  bitmap_enum.h  bluetooth.cpp  bluetooth.h  buzzer.cpp  buzzer.h  cc1101.cpp  cc1101.h  color.h  eeprom.h  generic_device.h  keyboard.cpp  keyboard.h  magic_path_packet.h  nfc.cpp  nfc.h  persistent.h  printk_event_handler.cpp  rgb_led.cpp  rgb_led.h  scoped_mutex_lock.h  st25r3911b.cpp  st25r3911b.h  thread.cpp  thread.h  timer.cpp  timer.h
common/rpc/: CMakeLists.txt  pw_console-logs.txt  system_server.cc  system_server.h  test.proto
docs/: CLion.md  Developing.md  TODO.md
firefly/: CMakeLists.txt  main.cpp  nrf52_pca10040.overlay  prj.conf
firmware/activator/: CMakeLists.txt  main.cpp  prj.conf
firmware/common/: CMakeLists.txt  basics.cmake  bluetooth.cpp  buzzer.cpp  cc1101.cpp  keyboard.cpp  magic_path_packet.h  nfc.cpp  nfc.h  nfc_definitions.cpp  nfc_definitions.h  rgb_led.cpp  sequences.h  st25r3911b.h  timer.cpp
firmware/common/rpc/: rpc_example.py  test.proto
firmware/firefly/: CMakeLists.txt  prj.conf
firmware/lock/: CMakeLists.txt  lock_v01.overlay  main.cpp  prj.conf
firmware/lock_test/: CMakeLists.txt  lock_v01.overlay  main.cpp  prj.conf
firmware/power_meter/: CMakeLists.txt  main.cpp  prj.conf
firmware/rothult_cordyceps/: CMakeLists.txt  main.cpp  prj.conf
firmware/smoke_test/: CMakeLists.txt  flash.jlink  main.cpp  prj.conf
hardware/: Ostranna.kicad_sym  note.md
hardware/blackmagic/: blackmagic.kicad_pcb  blackmagic.kicad_prl  blackmagic.kicad_pro  blackmagic.kicad_sch
hardware/blackmagic/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
hardware/cordyceps/: cordyceps.kicad_pcb  cordyceps.kicad_prl  cordyceps.kicad_pro  cordyceps.kicad_sch  sym-lib-table
hardware/cordyceps/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
hardware/esphome-nfc/: esphome-nfc.kicad_pcb  esphome-nfc.kicad_prl  esphome-nfc.kicad_pro  esphome-nfc.kicad_sch  fp-lib-table  sym-lib-table
hardware/esphome-nfc/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
hardware/hitl_rack/: hitl_rack.kicad_pcb  hitl_rack.kicad_prl  hitl_rack.kicad_pro  hitl_rack.kicad_sch  sym-lib-table
hardware/libs/: Common.bak  Common.kicad_sym
hardware/lock/: nrf52840_test_board.epro
hardware/rothult/: rothult.kicad_pcb  rothult.kicad_prl  rothult.kicad_pro
hardware/rothult/production/: netlist.ipc
hardware/usb_power_meter/: .gitignore  Ostranna.kicad_sym  sym-lib-table  usb_power_meter.kicad_pcb  usb_power_meter.kicad_prl  usb_power_meter.kicad_pro  usb_power_meter.kicad_sch
lock/: CMakeLists.txt  lock_v01.overlay  main.cpp  prj.conf
lock_test/: CMakeLists.txt  flash.jlink  main.cpp  nrf52840dk_nrf52840.overlay  prj.conf  system_server.cc  system_server.h  test.proto
manifest/: west.yml
power_meter/: CMakeLists.txt  main.cpp  prj.conf
research/voltcraft/: README.md  scan.py  test.py  voltcraft.py
smoke_test/: CMakeLists.txt  main.cpp  prj.conf
src/: battery.cpp  battery.h  cc1101.cpp  cc1101.h  cc1101_rf_settings.h  color.cpp  color.h  main.cpp  rgb_led.cpp  rgb_led.h  timer.cpp  timer.h
testing/: CMakeLists.txt  battery.py  printk_event_handler.h
